--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
   "author": "Michael Herman <michael@mherman.org>",
   "license": "MIT",
   "dependencies": {
-    "express": "~3.3.4",
-    "jade": "~0.34.1",
-    "passport": "~0.1.17",
-    "passport-local": "~0.1.6",
-    "mongoose": "~3.8.0",
-    "passport-local-mongoose": "~0.2.5",
-    "mocha": "~1.14.0",
+    "body-parser": "^1.10.2",
     "chai": "~1.8.1",
-    "should": "~2.1.0",
-    "bcrypt-nodejs": "0.0.3"
+    "cookie-parser": "^1.3.3",
+    "express": "^4.11.1",
+    "express-session": "^1.10.1",
+    "jade": "^1.9.1",
+    "mocha": "~1.14.0",
+    "mongoose": "^3.8.22",
+    "morgan": "^1.5.1",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^1.0.0",
+    "should": "~2.1.0"
   }
 }
